--- a/FrontEnd/src/assets/styles/care.css
+++ b/FrontEnd/src/assets/styles/care.css
@@ -21,7 +21,7 @@ body {
 .care-section{
    
 width: 100%;
-  max-width: 100vw;
+  /* max-width: 100vw; */
     height: auto;
     position:relative;
     /* overflow: hidden; */
@@ -37,7 +37,7 @@ width: 100%;
     padding:1rem;
     position:relative; background: red;
 
-    padding-bottom: 10rem;
+    /* padding-bottom: 10rem; */
    
    
 }.care-title{
@@ -610,19 +610,20 @@ top:32%
 @media (max-width: 480px) {
     .cares{
         width:100%;
-         max-width: 100vw;
+        
          padding:2rem;
         
     }
+    
     .care-section{
         gap:0.8rem;
         /* padding:2rem; */
-         width:100%;
+      
         
          
       
          position:relative;
-       
+       max-width: 100vW;
 
     width:100%;
 
@@ -631,6 +632,8 @@ top:32%
     flex-direction: column;
     justify-content: center;
     align-items: center;
+   
+    
     }
      
     .care-title{
