--- a/FrontEnd/src/assets/styles/footer.css
+++ b/FrontEnd/src/assets/styles/footer.css
@@ -58,6 +58,10 @@
 
    .phrase {
      bottom: -15vh;
+     display: flex;
+     /* background-color: aqua; */
+     justify-content: center;
+  
    }
 
    .mobile {
