--- a/FrontEnd/src/assets/styles/we.css
+++ b/FrontEnd/src/assets/styles/we.css
@@ -184,7 +184,9 @@ z-index: 100;
 .name-svg h2{
    font-weight: 700;
     font-size: clamp(2rem, 5vw, 2.15rem);
-    color: #38B000;
+ 
+      color:#FFB700;
+  
     display: flex;
     gap:1rem;
     text-align: right;
@@ -194,6 +196,7 @@ z-index: 100;
 }
 .name-svg span{
   color:#FFB700;
+     color: #38B000;
 
 }
 .description p{
