--- a/FrontEnd/src/assets/styles/nous.css
+++ b/FrontEnd/src/assets/styles/nous.css
@@ -1,6 +1,20 @@
 @media (max-width:468px){
+    .nous-section{
+        /* background-color: red; */
+        margin-bottom: -35vh;
+    }
     .nous-container {
         display: flex;
         flex-direction: column-reverse;
+        /* background-color: aqua; */
+       
     }
+    .images{
+        /* background-color: red;    */
+        /* width: 90%; */
+        top: 5vh;
+   
+    }
+    
 }
+
