--- a/FrontEnd/src/assets/styles/formule.css
+++ b/FrontEnd/src/assets/styles/formule.css
@@ -1,37 +1,488 @@
-.formule-section{
 
 
-  background-color: red;
-  width:100%;
-  display:flex;
-  justify-content: center;
-  align-items: center;
+
+/* Style général */
+.formule-section {
+  display: flex;
   flex-direction: column;
-  height:auto;
-
-}
-.form-pect{
-  background-color: pink;
-  display:flex;
-  justify-content: center;
   align-items: center;
-  height:auto
+  padding: 2rem;
+
+  background: #fff;
+  /* background-color: red; */
+  z-index: 12;
+  width:100%;
 }
-.graph34{
-  display:none
+
+/* .care-title {
+  text-align: center;
+  margin-bottom: 2rem;
+}
+
+.ligne-quote {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+} */
+
+
+
+/* .care-title h2 {
+  font-size: 1.2rem;
+  color: #38B000;
+}
+
+.care-title h1 {
+  font-size: 1.8rem;
+  line-height: 1.5;
+  
+} */
+
+.form-pect {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  /* background-color: #2e8a00; */
+  width:80%;
+  padding:1rem;
+
+  
 }
 .pecture{
-  width:50%;
-  background-color: darkblue;
-  height:auto;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+ padding:2rem;
+    /* background-color: #007200; */
+    width:50%;
 }
-.formule{
-  background-color: aqua;
-  width:50%;
-  height:auto;
+
+.pecture img {
+  
+  width: 90%;
+  border-radius: 8px;
+  object-fit: cover;
+  z-index: 12;
+}
+
+.formule {
+ 
+  width: 50%;
+  background: #fff;
+  background-color: white;
   display:flex;
+  justify-content: center;
+  align-items: center;
+ flex-direction: column;
+ gap:1rem;
+ 
+ 
+ 
+}
+
+.formule h2 {
+
+ 
+  color:#007200;
+  font-weight: 500;
+  font-style: normal; 
+  font-size: clamp(1.8rem, 4vw, 2.5rem);
+  line-height: 1.2; 
+  letter-spacing: 0;
+  text-align: right;
+  text-transform: capitalize;
+  opacity: 1;
+ direction: rtl;
+ width:80%;
+/* 
+ background-color: darkblue; */
+ 
+
+}
+
+.formule form {
+  display: flex;
+  padding:1rem;
   flex-direction: column;
+  gap: 1rem;
+  background-color: white;
+  width:80%;
+  z-index: 12;
+
+ 
+  background: #FFFFFF;
+box-shadow: 0px 0px 167.11px 0px #12121214;
+  border-radius: 1.04rem; 
+  box-shadow: 0 0 10.44rem 0 rgba(18, 18, 18, 0.08); /* #12121214 = rgba(18,18,18,0.08) */
+  display: flex;
+  flex-direction: column;
+  gap: 1.04rem; 
+
+  opacity: 1;
+  background: #fff;
+
+}
+
+.formule input,
+.formule textarea {
+  padding: 0.75rem 1rem;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 1rem;
+  text-align: right;
+}
+
+.formule textarea {
+  min-height: 100px;
+  resize: vertical;
+}
+
+.send {
+  background-color: #38B000;
+  color: #fff;
+  padding: 0.75rem;
+  border: none;
+border-radius:118.77px;
+
+  cursor: pointer;
+  /* display:none */
+  width:100%;
+
+
+  padding:1rem;
+ 
+  font-weight: 500;
+  font-style: normal; 
+  font-size: clamp(1rem, 2.2vw, 1.4rem);
+  line-height: 1.1; 
+  letter-spacing: 0;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+ 
+
+  opacity: 1;
+}
+
+.send:hover {
+  background-color: #2e8a00;
+}
+
+.btn-form {
+  display: flex;
+  gap: 1rem;
+ flex-direction: row;
+ justify-content: center;
+ align-items: center;
+ width:100;
+ /* background-color: darkcyan; */
+ padding:1rem;
+  /* display:none */
+}
+
+.btn-form button {
+  flex: 1;
+  padding: 0.75rem;
+  border: none;
+   border-radius: 7.4rem; 
+  cursor: pointer;
+  font-weight: bold;
+}
+
+.btn-form .second{
+
+
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    gap:0.5rem;
+    background: #FFAA00;
+    color:white;
+    
+  font-weight: 500;
+  font-style: normal; 
+  font-size: clamp(1rem, 2vw + 0.5rem, 1.15rem);
+  line-height: 1.2; 
+  letter-spacing: 0;
+  text-align: center;
+  padding:1rem;
+
+}
+.btn-form .first{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background: #FFFFFF;
+    color: #515151;
+      font-weight: 500; /* Medium */
+  font-style: normal;
+  gap:0.5rem;
+  font-size: clamp(1rem, 1.5vw + 0.8rem, 1.155rem);
+  line-height: 1.2; /* ou line-height: 21.11px; */
+  letter-spacing: 0;
+  text-align: center;
+  border: 1.99px solid #E3DBD8
+
+    
+
 }
 .graph33{
-  display:none;
+  margin-right:32%;
+  margin-top: -12%;
+  
+  }
+ .graph34{
+    position:absolute;
+    top:70%;
+    left:0;
+    /* background-color: #2e8a00; */
+  }
+ 
+@media (max-width: 1024px) {
+    .formule-section{
+        padding:2rem;
+    }
+  .form-pect {
+    /* ON GARDE flex-direction: row */
+    width: 100%;
+    padding: 1rem;
+    justify-content: space-between; /* Pour bien espacer */
+    gap: 1rem; /* Si besoin */
+  }
+
+  .pecture {
+    width: 45%;
+    padding: 1rem;
+  }
+
+  .pecture img {
+    width: 100%;
+  }
+
+  .formule {
+    width: 50%;
+  }
+
+  .formule h2 {
+    font-size: clamp(1.5rem, 3vw, 2rem);
+    text-align: right;
+    /* background-color: firebrick; */
+    width:100%;
+  }
+
+  .formule form {
+    width: 100%;
+    padding: 1rem;
+    margin-top:0%;
+  }
+
+  .care-title h1 {
+    font-size: 1.5rem;
+  }
+
+  .care-title h2 {
+    font-size: 1rem;
+  }
+
+  .btn-form {
+    flex-direction: row; /* On garde row */
+    gap: 1rem;
+    width: 100%;
+    padding: 0;
+  }
+
+  .btn-form button {
+    width: auto;
+    flex: 1; /* Pour répartir */
+  }
+
+  .send {
+    font-size: clamp(0.9rem, 2.5vw, 1.2rem);
+  }
+
+  .graph33 {
+    margin-right: 20%;
+    margin-top: -8%;
+  }
+  .graph33{
+
+
+    margin-right: 50%;
+    margin-top: -12%;
+  }
+  .graph34{
+
+/* 
+    background-color:seagreen; */
+    left:0;
+    top:26%;
+  }
+ 
+  @media(min-height:1024px){
+
+    .form-pect{
+      
+        
+        width:90%;
+    }
+   
+  }
 }
+
+@media (max-width: 768px) {
+  .form-pect {
+    flex-direction: column;
+    width: 100%;
+    padding: 2rem;
+  }
+
+  .pecture {
+    width: 100%;
+    padding: 2rem;
+  }
+
+  .pecture img {
+    width: 100%;
+    
+  }
+
+
+  .formule {
+    width: 100%;
+    padding: 0 1rem;
+  }
+.formule h2{
+    text-align: right;
+}
+  .formule form {
+    width: 100%;
+    
+    /* padding-bottom: 4rem; */
+    padding:3rem;
+    padding-bottom: 5rem;
+    /* background-color: darkblue; */
+  }
+
+  .care-title h1 {
+    font-size: 1.2rem;
+  }
+
+  .care-title h2 {
+    font-size: 0.9rem;
+  }
+
+  .btn-form {
+    flex-direction: column;
+    gap: 0.5rem;
+    width:100%;
+    padding:0rem;
+  }
+  .btn-form button{
+    width:100%;
+  }
+
+  .send {
+    font-size: clamp(0.8rem, 3vw, 1.1rem);
+  }
+  .graph34{
+    /* background-color: red; */
+    left:-5rem;
+    width:100%;
+    height:80vh;
+    top:25%;
+  }
+}
+
+@media (max-width: 480px) {
+  .formule-section{
+    /* background-color: pink; */
+    margin-top:2rem;
+    width:100%;
+    max-width:100vh;
+  }
+    .form-pect{
+        display:flex;
+        justify-content: start;
+        align-items: center;
+        flex-direction: column;
+        width:100%;
+        gap:0rem;
+        padding:0rem;
+        /* background-color: green; */
+    }
+  /* .care-title h1 {
+    font-size: 1rem;
+  }
+
+  .care-title h2 {
+    font-size: 0.8rem;
+  } */
+
+  .formule h2 {
+    font-size: clamp(1.2rem, 4vw, 1.5rem);
+  }
+
+  .send {
+    font-size: clamp(0.8rem, 4vw, 1rem);
+  }
+
+  .btn-form {
+    flex-direction: column;
+    gap:1rem;
+  }
+
+  .btn-form button {
+    width: 100%;
+  }
+  .formule{
+    width:100%;
+   padding:0rem;
+   /* background-color: red; */
+ 
+   
+   
+
+  }
+  
+  .pecture{
+    width:100%;
+    padding:1rem;
+height:auto;
+
+    /* background-color: saddlebrown; */
+  }
+  .pecture img{
+    height:auto;
+
+    
+  }
+  input{
+    width:100%;
+  }
+  .formule form{
+    width:100%;
+    /* background-color: firebrick; */
+    padding:0.5rem;
+
+  }
+  .graph33{
+
+    margin-right: 5%;
+  }
+
+ .graph34{
+  display: flex;
+  /* background-color: red; */
+  width:100vh;
+  /* z-index: 80; */
+  height: 60vh;
+  top:80%
+  /* background-color: darkblue; */
+ 
+ }
+ 
+ 
+}
+
