--- a/FrontEnd/src/assets/styles/story.css
+++ b/FrontEnd/src/assets/styles/story.css
@@ -660,6 +660,10 @@ min-height:28rem;
         top:8%;
         left:0rem;
     }
+    .story-section{
+         max-width:100vh;
+  width:100%;
+    }
    
    
 }
