--- a/FrontEnd/src/assets/styles/story.css
+++ b/FrontEnd/src/assets/styles/story.css
@@ -350,6 +350,12 @@
    
     width:80%;
 }
+.graph12{
+    /* background-color: #007200; */
+    max-width:none;
+    width:25vh;
+    top:2rem;
+}
 }
 
 
