--- a/FrontEnd/src/assets/styles/who.css
+++ b/FrontEnd/src/assets/styles/who.css
@@ -231,7 +231,7 @@
         width: 90%;
         font-size: xx-large;
         margin-left: 5%;
-        margin-top: 2%;
+        margin-top: 10%;
 
     }
 
@@ -239,6 +239,11 @@
         /* background-color: red; */
         width: 100%;
         margin-left: 39%;
+        margin-top: 10%;
 
+    }
+    .photoWho{
+        /* background-color: aqua; */
+        width: 70%;
     }
 }
