--- a/FrontEnd/src/assets/styles/nous.css
+++ b/FrontEnd/src/assets/styles/nous.css
@@ -2,6 +2,7 @@
     .nous-section{
         /* background-color: red; */
         margin-bottom: -35vh;
+        margin-top: 80vh;
     }
     .nous-container {
         display: flex;
