--- a/FrontEnd/src/assets/styles/care.css
+++ b/FrontEnd/src/assets/styles/care.css
@@ -124,7 +124,7 @@ flex-direction: row-reverse;
 
 .image img {
  width: 100%;
-  height: auto; 
+  height: 100%; 
   /* display: block; */
   border-bottom-right-radius: 25.37px;
   border-top-right-radius: 25.37px;
@@ -314,6 +314,41 @@ z-index: 100;
  right:35%;
   transform: rotate(-40.36deg);
 }
+@media(min-width:2560px){
+
+
+.care-content p{
+ 
+ 
+  width:80%;
+  display:flex;
+  line-height:1.9 ;
+  
+
+}
+.care-name .graph{
+  /* background-color: darkcyan; */
+  width:9%
+}
+.care-p{
+  /* background-color: yellow; */
+  display:flex;
+  justify-content: end;
+  align-items: end;
+}
+.care-content{
+  /* background-color: darkgoldenrod; */
+  
+ display:flex;
+ justify-content: center;
+ align-items: center;
+ padding-right:3rem;
+ padding-top:0rem;
+ padding-left: 3rem;
+}
+
+}
+
 @media(max-width:1024px){
 
   .care-section{
@@ -322,6 +357,7 @@ z-index: 100;
   .cares{
     width:80%;
   }
+  
   .image{
     height:auto
   }
