--- a/FrontEnd/src/assets/styles/donate.css
+++ b/FrontEnd/src/assets/styles/donate.css
@@ -42,6 +42,10 @@ height: 60vh;
   flex: 0 1 45%;
   max-width: 70vh;
  
+
+
+
+ 
 }
 
 .graphic-box img {
@@ -52,8 +56,8 @@ height: 60vh;
 transform: translateY(-100.5%);
   position: absolute;
   z-index: 1;
-  margin-left: 10%;
-  margin-top: 0.6%;
+  /* margin-left: 10%;
+  margin-top: 0.6%; */
   /* margin-top: -372px;
   margin-left: 10px; */
  
@@ -386,6 +390,7 @@ gap:5000rem;
     line-height: 1.6;
   }
  
+
 
 }
 @media (max-width: 768px) and (min-width:541px ){
