--- a/FrontEnd/src/assets/styles/care.css
+++ b/FrontEnd/src/assets/styles/care.css
@@ -94,11 +94,13 @@ text-transform: capitalize;
 display:flex;
 justify-content: space-between;
 align-items: center;
-width:60%;
+width:65%;
 /* background-color: aquamarine; */
 flex-direction: column;
 height: auto;
 gap:2rem;
+/* background-color: pink; */
+
 
 
 
@@ -112,6 +114,7 @@ flex-direction: row-reverse;
    box-shadow: 0 4px 15px rgba(0,0,0,0.1);
    position:relative;
    z-index: 10;
+   width:100%;
  
 
  
@@ -134,10 +137,12 @@ flex-direction: row-reverse;
 
 .care-content {
   width: 50%;
-  padding: 2rem;
+ 
   display:flex;
   flex-direction: column;
  gap:1rem;
+ padding:3rem;
+
  
   
     
