--- a/FrontEnd/src/assets/styles/care.css
+++ b/FrontEnd/src/assets/styles/care.css
@@ -9,14 +9,13 @@ html, body {
 .care-section{
    
 width: 100%;
-  /* max-width: 100vw; */
+ 
     height: auto;
     position:relative;
-    /* overflow: hidden; */
+   
    
    
   
-    /* background-color:pink ; */
     display:flex;
     justify-content: center;
     align-items: center;
@@ -24,9 +23,7 @@ width: 100%;
     gap:2rem;
     padding:1rem;
    
-     /* background: red; */
-
-    /* padding-bottom: 10rem; */
+   
    
    
 }.care-title{
@@ -35,7 +32,7 @@ width: 100%;
     justify-content: center;
     align-items: center;
     width:100%;
-    /* background-color: red; */
+   
     gap:1rem;
   
 }
@@ -115,6 +112,7 @@ flex-direction: row-reverse;
    position:relative;
    z-index: 10;
    width:100%;
+   
  
 
  
@@ -654,7 +652,7 @@ top:32%
          
       
          position:relative;
-       max-width: 100vW;
+       /* max-width: 100vW; */
 
     width:100%;
 
@@ -782,7 +780,7 @@ top:32%
 @media(max-width:440px) and (min-width:300px){
   .care-section{
     width:100%;
-    max-width:98vh;
+    /* max-width:98vh; */
     /* background-color: #38B000; */
   }
 }
