--- a/FrontEnd/src/assets/styles/story.css
+++ b/FrontEnd/src/assets/styles/story.css
@@ -287,6 +287,7 @@
 .story-title{
   
   font-size: 4rem;
+  
 }
 .story-content{
 
@@ -298,7 +299,11 @@
 .content h2{
     
     font-size: 3rem;
+    
+    text-align: right;
+    width:100%;
 }
+
 .content p{
    
     font-size: 2rem;
@@ -315,6 +320,7 @@
   
     font-size:1.8rem;
     direction: rtl;
+    font-weight: 500;
 }
 .icon{
 
@@ -354,7 +360,9 @@
     /* background-color: #007200; */
     max-width:none;
     width:25vh;
-    top:2rem;
+    top:2.5rem;
+    /* background-color: pink; */
+right:35%
 }
 }
 
@@ -669,6 +677,12 @@ min-height:28rem;
     .story-section{
          max-width:100vh;
   width:100%;
+    }
+    .story-image{
+        /* background-color: #4A4A4A; */
+        display:flex;
+        align-items: start;
+        height:auto
     }
    
    
